# Vanadium

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: Version.h.in  projectSources.cmake
example/: config.yaml  engine_config.yaml  main.cpp  settings.yaml  shader.xml  shader.yaml
example/fractol/: fractol.cmake
example/fractol/src/: AppInitHook.cpp  AppInitHook.h  DefaultInjector.h  EntryPoint.cpp  EntryPoint.h  main.cpp
example/resources/shaders/: blur.xml  fastBlur.xml  fractal.xml  framebuffer.xml  framebufferblur.xml  gaussianBlur.xml  line.xml  plain.xml  plainColor.xml  plainColor2D.xml  slowBlur.xml  textureBlenderByAlpha.xml
example/simple/: CMakeLists.txt  example.cmake  main.cpp
example/simple/src/: EntryPoint.cpp  EntryPoint.h  main.cpp
example/simple/src/states/: MainState.cpp  MainState.h
example/states/: CustomState.cpp  CustomState.h  Figure.cpp  Figure.h  Gui.cpp  Gui.h  SvgModelContainer.cpp  SvgModelContainer.h  SvgModels.h  imgui_opengl3.cpp  imgui_opengl3.h  imgui_sdl.cpp  imgui_sdl.h
example/states/gui/: Gui.cpp  Gui.h  ThemeSelector.cpp  ThemeSelector.h
example/user/: figure1.json
include/vanadium/: Vanadium.h
include/vanadium/core/: Application.h  Dialogs.h  EventProvider.h  Exceptions.h  IO.h  KeyCodes.h  Log.h  LogFormatters.h  Math.h  Random.h  ResourceManager.h  SanityChecker.h  State.h  StateStack.h  Types.h  Version.h  Window.h
include/vanadium/render/: Framebuffer.h  Texture.h  VertexBuffer.h
include/vanadium/stateCommands/: PopAllStatesCommand.h
include/vanadium/vfs/: Exceptions.h
scripts/: blurShaderGenerator.py  enumConversion.py  gaussBlurShaderGenerator.py  glslKernelBlurGenerator.py
scripts/enumConversion/: main.py
src/: Vanadium.h
src/core/: Animation.h  Application.cpp  Application.h  Assert.h  Command.h  Dialogs.h  EventProvider.cpp  EventProvider.h  Exceptions.cpp  Exceptions.h  IO.cpp  IO.h  KeyCodes.h  KeyboardKeyCode.cpp  KeyboardKeyCode.h  Log.cpp  Log.h  LogFormatters.h  Math.cpp  Math.h  MouseKeyCode.cpp  MouseKeyCode.h  Random.cpp  Random.h  ResourceManager.cpp  State.cpp  State.h  StateStack.cpp  StateStack.h  Stopwatch.cpp  Stopwatch.h  StringHash.h  Timer.cpp  Timer.h  Tools.cpp  Tools.h  Types.h  Window.cpp  Window.h  WindowProperties.h
src/core/application/: Application.cpp  Application.h  ApplicationImpl.cpp  ApplicationImpl.h  ApplicationMainLoop.cpp  ApplicationMainLoop.h  ApplicationProperties.cpp  ApplicationProperties.h  FactoryContainer.cpp  FactoryContainer.h  FactoryContainerImpl.cpp  FactoryContainerImpl.h  MainLoopImpl.cpp  MainLoopImpl.h  State.cpp  State.h  StateStack.cpp  StateStack.h  StateStackImpl.cpp  StateStackImpl.h
src/core/interfaces/: Application.h  ApplicationInitHook.h  Command.h  EventDispatcher.h  EventProvider.h  Factory.h  FactoryContainer.h  IO.h  MainLoop.h  State.h  StateStack.h  Subsystem.h  Timer.h  Window.cpp  Window.h
src/core/math/: Math.cpp  Math.h  Random.cpp  Random.h
src/core/stateCommands/: PopAllStatesCommand.cpp  PopAllStatesCommand.h  PopStateCommand.cpp  PopStateCommand.h  PushStateCommand.cpp  PushStateCommand.h  ReplaceStateCommand.cpp  ReplaceStateCommand.h
src/core/streams/: InputMemoryBuffer.h  InputMemoryStream.h
src/core/subsystems/: BgfxCallback.cpp  BgfxCallback.h  BgfxSubsystem.cpp  BgfxSubsystem.h  LoggingSubsystem.cpp  LoggingSubsystem.h  SdlSubsystem.cpp  SdlSubsystem.h  VfsSubsystem.cpp  VfsSubsystem.h
src/core/types/: KeyboardKeyCode.cpp  KeyboardKeyCode.h  LogLevel.h  MouseKeyCode.cpp  MouseKeyCode.h  Reference.h
src/event/: Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
src/graphics/: BgfxCallback.cpp  BgfxCallback.h  BgfxContext.cpp  BgfxContext.h  RendererApiEnum.cpp  RendererApiEnum.h  ShaderFactory.cpp  ShaderFactory.h
src/include/vanadium/: Vanadium.h
src/platform/default/: DefaultDialogs.cpp  DefaultDialogs.h  DefaultEventProvider.cpp  DefaultEventProvider.h  DefaultIO.cpp  DefaultIO.h  DefaultKeyCodes.cpp  DefaultKeyCodes.h  DefaultLoggerImpl.h  DefaultRandomImpl.cpp  DefaultRandomImpl.h  DefaultStopwatch.cpp  DefaultStopwatch.h  DefaultTimer.cpp  DefaultTimer.h  DefaultWindow.cpp  DefaultWindow.h
src/platform/linux/: LinuxEventProvider.cpp  LinuxEventProvider.h  LinuxStopwatch.cpp  LinuxStopwatch.h  LinuxTimer.cpp  LinuxTimer.h  LinuxWindow.cpp  LinuxWindow.h
src/platform/opengl/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLCall.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLPostprocessing.cpp  OpenGLRenderApi.cpp  OpenGLRenderApi.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp
src/platform/sdl/: SdlDialogs.cpp  SdlDialogs.h  SdlEventProvider.cpp  SdlEventProvider.h  SdlEventProviderImpl.cpp  SdlEventProviderImpl.h  SdlIncludes.h  SdlKeyCodes.cpp  SdlKeyCodes.h  SdlStopwatchImpl.cpp  SdlStopwatchImpl.h  SdlTimerImpl.h  SdlWindow.cpp  SdlWindow.h  SdlWindowImpl.cpp  SdlWindowImpl.h
src/render/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Postprocessing.cpp  Postprocessing.h  RenderApi.cpp  RenderApi.h  Shader.cpp  Shader.h  Texture.cpp  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp
src/scene/: Camera.cpp  Camera.h  FpsCamera.cpp  FpsCamera.h  Mesh.cpp  Mesh.h  PositionCamera.cpp  PositionCamera.h
src/stateCommands/: PopAllStatesCommand.cpp  PopAllStatesCommand.h  PopStateCommand.cpp  PopStateCommand.h  PushStateCommand.cpp  PushStateCommand.h  ReplaceStateCommand.cpp  ReplaceStateCommand.h
src/submodules/svg/: Commands.h  Document.h  Layer.h  Parser.cpp  Parser.h  Path.h  Rasterizer.cpp  Rasterizer.h  Types.h
src/vanadium/: Vanadium.h
src/vanadium/core/: Assert.h  Dialogs.h  Exceptions.cpp  Exceptions.h  Log.cpp  Log.h  LogFormatters.h  StringHash.h  Tools.cpp
src/vfs/: Entry.cpp  Entry.h  Exceptions.h  FileStream.cpp  FileStream.h  InputFileStream.cpp  InputFileStream.h  OutputFileStream.cpp  OutputFileStream.h  Vfs.cpp  Vfs.h
(+320 files in other folders)
